--- a/index.html
+++ b/index.html
@@ -368,22 +368,23 @@
       </script>
     </main>
     <!-- github giscus -->
-    <script
-      src="https://giscus.app/client.js"
-      data-repo="namhyonwoo/web-static"
-      data-repo-id="R_kgDON1Fbow"
-      data-category="[ENTER CATEGORY NAME HERE]"
-      data-category-id="[ENTER CATEGORY ID HERE]"
-      data-mapping="pathname"
-      data-strict="0"
-      data-reactions-enabled="1"
-      data-emit-metadata="0"
-      data-input-position="bottom"
-      data-theme="catppuccin_latte"
-      data-lang="ko"
-      crossorigin="anonymous"
-      async
-    ></script>
+    <div id="giscus">
+      <script
+        src="https://giscus.app/client.js"
+        data-repo="namhyonwoo/web-static"
+        data-repo-id="R_kgDON1Fbow"
+        data-category-id="DIC_kwDON1Fbo84Cmt6z"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="catppuccin_latte"
+        data-lang="ko"
+        crossorigin="anonymous"
+        async
+      ></script>
+    </div>
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-6">
