--- a/index.html
+++ b/index.html
@@ -74,14 +74,21 @@
       referrerpolicy="no-referrer"
     />
     <style>
-      /* 추가적인 스타일 (선택 사항) */
-      .container {
-        max-width: 1200px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-left: 1rem;
-        padding-right: 1rem;
-      }
+        .container {
+            max-width: 1200px;
+            margin-left: auto;
+            margin-right: auto;
+            padding-left: 1rem;
+            padding-right: 1rem;
+        }
+        body {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+        main {
+            flex: 1;
+        }
     </style>
   </head>
 
@@ -387,7 +394,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-6">
+    <footer class="bg-gray-800 text-white py-6 mt-auto">
       <div class="container text-center">
         <p>&copy; 2025 인생유틸. All rights reserved.</p>
         <p>
