--- a/real-age-calculator.html
+++ b/real-age-calculator.html
@@ -13,13 +13,20 @@
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        /* 추가적인 스타일 (선택 사항) */
         .container {
             max-width: 1200px;
             margin-left: auto;
             margin-right: auto;
             padding-left: 1rem;
             padding-right: 1rem;
+        }
+        body {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+        main {
+            flex: 1;
         }
     </style>
 </head>
@@ -127,7 +134,7 @@
 
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-6">
+    <footer class="bg-gray-800 text-white py-6 mt-auto">
         <div class="container text-center">
             <p>&copy; 2025 인생유틸. All rights reserved.</p>
             <p>
