--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="문의하기 - 인생유틸">
     <meta property="og:description" content="인생유틸에 대한 문의사항이나 피드백을 보내주세요. 더 나은 서비스를 위해 귀하의 의견을 기다립니다.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://namhyonwoo.github.io/contact.html">
+    <meta property="og:url" content="https://namhyonwoo.github.io/contact.html.html">
     <meta property="og:locale" content="ko_KR">
 
     <link rel="icon" href="https://raw.githubusercontent.com/namhyonwoo/refs/heads/main/favicon.ico" type="image/x-icon">
@@ -103,7 +103,7 @@
             <p>&copy; 2025 인생유틸. All rights reserved.</p>
             <p>
                 <a href="/asset/terms.html" class="text-gray-300 hover:text-white">이용약관</a> |
-                <a href="/contact" class="text-gray-300 hover:text-white">문의하기</a>
+                <a href="/contact.html" class="text-gray-300 hover:text-white">문의하기</a>
             </p>
         </div>
     </footer>
