--- a/date-calculator.html
+++ b/date-calculator.html
@@ -180,7 +180,7 @@
       <p>&copy; 2025 인생유틸. All rights reserved.</p>
       <p>
         <a href="/asset/terms.html" class="text-gray-300 hover:text-white">이용약관</a> |
-        <a href="/contact" class="text-gray-300 hover:text-white">문의하기</a>
+        <a href="/contact.html" class="text-gray-300 hover:text-white">문의하기</a>
       </p>
     </div>
   </footer>
