--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             >이용약관</a
           >
           |
-          <a href="/contact" class="text-gray-300 hover:text-white">문의하기</a>
+          <a href="/contact.html" class="text-gray-300 hover:text-white">문의하기</a>
         </p>
       </div>
     </footer>
