--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="robots" content="index, follow" />
     <!-- 검색 엔진 로봇이 페이지를 색인하고 링크를 따라갈 수 있도록 허용 -->
     <meta name="googlebot" content="index, follow" />
+    <meta name="google-site-verification" content="EEwz9uGaXbsknOKnDD1osVQdjJwsNVokUhwZ23myfCA" />
     <!-- Google 검색 로봇에 대한 명시적 지시 -->
 
     <!-- Open Graph Meta Tags (Optional - for social media sharing) -->
